--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ body::-webkit-scrollbar-thumb{
 #texto2{
     height: 200px;
     position: relative;
-    padding: 0 auto;
+    padding: 0 100%;
     padding-top: 60px;
     font-size: 50px;
     text-align: center;
