--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ body::-webkit-scrollbar-thumb{
 
 #texto2{
     height: 200px;
+    width: 100%;
     position: relative;
     padding-top: 60px;
     font-size: 50px;
