--- a/style.css
+++ b/style.css
@@ -200,6 +200,7 @@ body::-webkit-scrollbar-thumb{
 
 .texto{
     margin: 20px;
+    width: 100%;
     font-size: 25px;
     text-align: center;
     transition: 1s;
